@@ -8,6 +8,7 @@ var documents = require("../documents");
 var Result = require("../results").Result;
 var warning = require("../results").warning;
 var xml = require("../xml");
+var transforms = require("../transforms");
 var uris = require("./uris");
 
 function createBodyReader(options) {
@@ -385,21 +386,52 @@ function BodyReader(options) {
         },
 
         "w:sdt": function(element) {
-            var checkbox = element
-                .firstOrEmpty("w:sdtPr")
-                .first("wordml:checkbox");
+            var contentResult = readXmlElements(element.firstOrEmpty("w:sdtContent").children);
+            return contentResult.map(function(content) {
+                // From the WordML standard: https://learn.microsoft.com/en-us/openspecs/office_standards/ms-docx/3350cb64-931f-41f7-8824-f18b2568ce66
+                //
+                // > A CT_SdtCheckbox element that specifies that the parent
+                // > structured document tag is a checkbox when displayed in the
+                // > document. The parent structured document tag contents MUST
+                // > contain a single character and optionally an additional
+                // > character in a deleted run.
 
-            if (checkbox) {
-                var checkedElement = checkbox.first("wordml:checked");
-                var isChecked = !!checkedElement && readBooleanAttributeValue(
-                    checkedElement.attributes["wordml:val"]
-                );
-                return elementResult(documents.checkbox({
-                    checked: isChecked
-                }));
-            } else {
-                return readXmlElements(element.firstOrEmpty("w:sdtContent").children);
-            }
+                var checkbox = element
+                    .firstOrEmpty("w:sdtPr")
+                    .first("wordml:checkbox");
+
+                if (checkbox) {
+                    var checkedElement = checkbox.first("wordml:checked");
+                    var isChecked = !!checkedElement && readBooleanAttributeValue(
+                        checkedElement.attributes["wordml:val"]
+                    );
+                    var documentCheckbox = documents.checkbox({
+                        checked: isChecked
+                    });
+
+                    var hasCheckbox = false;
+                    var replacedContent = content.map(transforms._elementsOfType(
+                        documents.types.text,
+                        function(text) {
+                            if (text.value.length > 0 && !hasCheckbox) {
+                                hasCheckbox = true;
+                                return documentCheckbox;
+                            } else {
+                                return text;
+                            }
+                        }
+                    ));
+
+                    if (hasCheckbox) {
+                        return replacedContent;
+                    } else {
+                        return documentCheckbox;
+                    }
+
+                } else {
+                    return content;
+                }
+            });
         },
 
         "w:ins": readChildElements,
