@@ -3,6 +3,7 @@ var _ = require("underscore");
 exports.paragraph = paragraph;
 exports.run = run;
 exports._elements = elements;
+exports._elementsOfType = elementsOfType;
 exports.getDescendantsOfType = getDescendantsOfType;
 exports.getDescendants = getDescendants;
 
